tests/errors/semantic/blocking/IMPORTING_EXISTING_IDENTIFIED2.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def ones():
    print(22)

from numpy import ones

g = ones(6)

print(g)
